--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "npx eslint --ext .ts,.tsx ."
   },
   "dependencies": {
     "@types/styled-components": "^5.1.26",
@@ -15,13 +16,17 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.4",
     "react-router-dom": "^6.4.4",
+    "react-syntax-highlighter": "^15.5.0",
+    "remark-gfm": "^3.0.1",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.1.3",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@types/react-syntax-highlighter": "^15.5.5",
     "@vitejs/plugin-react": "^2.2.0",
     "eslint": "^8.29.0",
     "typescript": "^4.6.4",
